# sf2

./: .gitignore  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  Alpdm3.txt  CMakeCache.txt  CMakeLists.txt  LICENSE.txt  MEMORY_REPORT.txt  Project.sln  README.txt  Res.txt  SufPref2.pro  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  ac_trie.cpp  bprob_graf.cpp  cmake_install.cmake  d_hhm_prob.cpp  d_hhm_prob.h  h_m_node.h  h_m_ovgraf.cpp  hmm_ovgraf.cpp  hmm_ovgraf.h  hmm_preprocessing.cpp  m_ovgraf.cpp  m_ovgraf.h  m_trtree.h  maindata.cpp  maindata.h  mmodel_prob.cpp  mmodel_prob.h  nd_hhm_prob.cpp  nd_hhm_prob.h  nodeac.h  nodebern.h  nodeinit.cpp  nodeov.h  ov_graf.cpp  pssm8.txt  py_module.html  (+13 more)
data/: Alpb.txt  Alpb1.txt  Alpb2.txt  Alpd.txt  Alph.txt  Alph1.txt  Alph11.txt  Alph2.txt  Alph21.txt  Alpm.txt  Alpm1.txt  Alpm11.txt  Alpm2.txt  Alpm20.txt  Alpm3.txt  ConsAlp.txt  GABPA_f.txt  Rand12_3000.txt  Rand8_100.txt  Words2.txt  pssm.txt  pssm1.txt  pssm12.txt  pssm2.txt  pssm3.txt  words.txt  words1.txt  words3.txt
files/: ALL_BUILD.vcxproj.filters
input/: Alpb.txt  Alph.txt  Alpm.txt  Alpm1.txt  ConsAlp.txt  FootPrints.txt  PSSM.txt  Pattern.txt  ReadMe.txt
